<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/surface_primary"
    android:fillViewport="true"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_12sdp">

        <LinearLayout
            android:id="@+id/llScan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/custom_radius_12"
            android:backgroundTint="@color/primary"
            android:gravity="center_vertical"
            android:padding="@dimen/_12sdp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_42sdp"
                android:layout_height="@dimen/_42sdp"
                android:background="@drawable/custom_radius_12"
                android:backgroundTint="@android:color/white"
                android:padding="@dimen/_8sdp"
                android:src="@drawable/ic_scan_home" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sans_trial_medium"
                    android:includeFontPadding="false"
                    android:text="@string/scan_qr"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_14sdp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:fontFamily="@font/sans_trial_regular"
                    android:includeFontPadding="false"
                    android:text="@string/cl_end_scan_subtitle"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_10sdp" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="@dimen/_58sdp"
                android:layout_height="@dimen/_28sdp"
                android:background="@drawable/custom_radius_10"
                android:backgroundTint="@android:color/white"
                android:fontFamily="@font/sans_trial_medium"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/cl_end_scan_action"
                android:textColor="@color/primary"
                android:textSize="@dimen/_11sdp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/llHistory"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@drawable/custom_radius_12"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/_12sdp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_36sdp"
                    android:layout_height="@dimen/_36sdp"
                    android:background="@drawable/custom_radius_12"
                    android:backgroundTint="@color/dock_history_fill"
                    android:padding="@dimen/_8sdp"
                    android:src="@drawable/ic_save_history"
                    app:tint="@color/dock_history" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:fontFamily="@font/sans_trial_medium"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/cl_end_history"
                    android:textColor="@color/text_primary"
                    android:textSize="@dimen/_13sdp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:fontFamily="@font/sans_trial_regular"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/cl_end_history_subtitle"
                    android:textColor="@color/text_secondary"
                    android:textSize="@dimen/_10sdp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llAppWidgets"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@drawable/custom_radius_12"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/_12sdp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_36sdp"
                    android:layout_height="@dimen/_36sdp"
                    android:background="@drawable/custom_radius_12"
                    android:backgroundTint="@color/primary_light"
                    android:padding="@dimen/_8sdp"
                    android:src="@drawable/ic_app_widgets" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:fontFamily="@font/sans_trial_medium"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/app_widgets"
                    android:textColor="@color/text_primary"
                    android:textSize="@dimen/_13sdp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:fontFamily="@font/sans_trial_regular"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/cl_end_widgets_subtitle"
                    android:textColor="@color/text_secondary"
                    android:textSize="@dimen/_10sdp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
