<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_radius_16"
    android:backgroundTint="?attr/colorSurface"
    android:orientation="vertical"
    android:padding="@dimen/_20sdp">

    <LinearLayout
        android:id="@+id/llNameAsc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/sans_trial_medium"
            android:paddingBottom="@dimen/_2sdp"
            android:text="@string/by_name_asc_a_to_z"
            android:textColor="?attr/textPrimaryColor"
            android:textSize="@dimen/_12sdp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivNameAscSelect"
            android:layout_width="@dimen/_18sdp"
            android:layout_height="@dimen/_18sdp"
            android:src="@drawable/ic_done"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llNameDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center_vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/sans_trial_medium"
            android:paddingBottom="@dimen/_2sdp"
            android:text="@string/by_name_desc_z_to_a"
            android:textColor="?attr/textPrimaryColor"
            android:textSize="@dimen/_12sdp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivNameDescSelect"
            android:layout_width="@dimen/_18sdp"
            android:layout_height="@dimen/_18sdp"
            android:src="@drawable/ic_done"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llInstalledDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center_vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/sans_trial_medium"
            android:paddingBottom="@dimen/_2sdp"
            android:text="@string/by_installed_date"
            android:textColor="?attr/textPrimaryColor"
            android:textSize="@dimen/_12sdp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivInstalledDateSelect"
            android:layout_width="@dimen/_18sdp"
            android:layout_height="@dimen/_18sdp"
            android:src="@drawable/ic_done"
            android:visibility="gone" />

    </LinearLayout>

</LinearLayout>